# Centralized_Log_Viewer

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml  settings.conf
.github/workflows/: release.yml
centralized_log_viewer/: log_viewer.css  main.py
clv/: AGENTS.md  __main__.py  app.py  storage.py
clv/plugins/: AGENTS.md
clv/services/: __init__.py  sources.py
clv/widgets/: AGENTS.md  add_source_dialog.py  advanced_drawer.py  custom_time_dialog.py  filter_chip.py  query_bar.py  segmented.py
log_viewer/: config.py  log_query.py  log_viewer.css  main.py  parser.py  paths.py
tests/: test_advanced_drawer.py  test_log_rendering.py  test_query_bar.py  test_sources.py
