[tool.poetry]
name = "log-viewer"
version = "1.5.1"
description = "Centralized Log Viewing Application based on Textual. Log_viewer will auto discover the log(s) directory(ies) defined in the log_viewer.conf file."
authors = ["Michael Levesque <michaell@advtch.me>"]
readme = "README.md"
packages = [{ include = "log_viewer" }]         # ← Ensures code is packaged
include = ["log_viewer/log_viewer.css"]         # ← Valid asset inclusion!

[tool.poetry.dependencies]
python = "^3.13"
textual = "^3.2.0"
watchdog = "^6.0.0"

[tool.poetry.scripts]
CentralizedLogViewer = "log_viewer.main:main"
clv = "log_viewer.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
