[tool.poetry]
name = "clv"
version = "2.0.0"
description = "Centralized Log Viewer Textual TUI"
readme = "README.md"
authors = ["Centralized Log Viewer Maintainers <maintainers@example.com>"]
packages = [
    { include = "clv" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
textual = "^6.5.0"
rich = ">=14.2.0"

[tool.poetry.scripts]
clv = "clv.app:run"
CentralizedLogViewer = "clv.app:run"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
